--- a/2-amazing-in-python/amazed-by-Python-3.12.ipynb
+++ b/2-amazing-in-python/amazed-by-Python-3.12.ipynb
@@ -344,6 +344,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We declare our generics after the class name adding a list with our expected parameters — generics.\n",
+    "\n",
+    "This introduction brings lots of flexibility and freedom in how we create and handle generic types.\n",
+    "\n",
+    "The same thing we did in a class, can be done with a function:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
