--- a/2-amazing-in-python/amazed-by-Python-3.12.ipynb
+++ b/2-amazing-in-python/amazed-by-Python-3.12.ipynb
@@ -356,6 +356,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_value[K, T](key: K) -> T:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
