--- a/2-amazing-in-python/amazed-by-Python-3.12.ipynb
+++ b/2-amazing-in-python/amazed-by-Python-3.12.ipynb
@@ -365,6 +365,225 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we define a function that receives a key that can be of any type and returns a generic type as response — T.\n",
+    "\n",
+    "If we want to create a bound or define a type, we can easily do that as well:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_value[K: (str, int), T: str](key: K) -> T:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With this, we are saying that our key — K, has to be of type str or int and our generic T can be of any kind of str or subtype of str object.\n",
+    "\n",
+    "Now let’s jump into my favorite part — The type statement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The type statement\n",
+    "If you want to define a new type in Python, let’s say a Dictionary like in our previous example, one of the ways to do it is by using a TypeAlias.\n",
+    "\n",
+    "A TypeAlias is a type used to create aliases that serve as a ‘nickname’ to a fixed type that you create."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypeAlias\n",
+    "\n",
+    "Dictionary: TypeAlias = dict[str | int, str] # new type alias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "types.GenericAlias"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(Dictionary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Without the TypeAlias Python would consider our line as a variable assignment.\n",
+    "\n",
+    "With TypeAlias, we have a new type that we can use to define our variables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = [\"a\",1,2]\n",
+    "\n",
+    "def new_item(item: Dictionary) -> list[Dictionary]:\n",
+    "    return items.append(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 1, 2]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So what does this have to do with the type statement you might ask?\n",
+    "\n",
+    "Well, TypeAlias is deprecated in Python3.12. It’s not removed, but it's not encouraged either.\n",
+    "\n",
+    "Introduced in Python3.12, we now have the type statement.\n",
+    "\n",
+    "The type statement makes it cleaner and easier to spot a new type when is created.\n",
+    "\n",
+    "The goal with this is to make it similar to how we create a new class using the class keyword or a function with the def keyword."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type Dictionary = dict[str | int, str] # new type alias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type stringlist = list[str]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'typing.TypeAliasType' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mstringlist\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(\u001b[38;5;241m2\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'typing.TypeAliasType' object has no attribute 'append'"
+     ]
+    }
+   ],
+   "source": [
+    "stringlist.append(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Much better, if you ask me.\n",
+    "\n",
+    "We can use a combination of generic types when creating our type alias and do all sorts of things. We’re only limited by our imagination and needs, of course."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type Dictionary = dict[K, T] # new type alias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let’s make a final test with everything we saw so far and see if nothing breaks:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Yanick'}, {1: 1}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "type Dictionary = dict[K, T] # new type alias with generic types\n",
+    "\n",
+    "\n",
+    "items = []\n",
+    "\n",
+    "def new_item(item: Dictionary) -> list[Dictionary]:\n",
+    "    global items # access the global variable and append item to it\n",
+    "    items.append(item)\n",
+    "\n",
+    "new_item({'name': 'Yanick'})\n",
+    "new_item({1: 1})\n",
+    "\n",
+    "print(items)\n",
+    "# the output should be - [{'name': 'Yanick'}, {1: 1}]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
