--- a/0-play-ground/play-two.ipynb
+++ b/0-play-ground/play-two.ipynb
@@ -62,6 +62,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For / Else   | your mind gonna break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 is prime!\n",
+      "3 is prime!\n",
+      "5 is prime!\n",
+      "7 is prime!\n",
+      "11 is prime!\n",
+      "13 is prime!\n",
+      "17 is prime!\n",
+      "19 is prime!\n",
+      "23 is prime!\n",
+      "29 is prime!\n",
+      "31 is prime!\n",
+      "37 is prime!\n",
+      "41 is prime!\n",
+      "43 is prime!\n",
+      "47 is prime!\n",
+      "53 is prime!\n",
+      "59 is prime!\n",
+      "61 is prime!\n",
+      "67 is prime!\n",
+      "71 is prime!\n",
+      "73 is prime!\n",
+      "79 is prime!\n",
+      "83 is prime!\n",
+      "89 is prime!\n",
+      "97 is prime!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(2, 100):\n",
+    "    for factor in range(2, int(number ** 0.5) + 1):\n",
+    "        if number % factor == 0:\n",
+    "            break\n",
+    "    else:\n",
+    "        print(f'{number} is prime!')\n",
+    "        \n",
+    "# can you see this? for and else?  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
