while and else :)

--- a/0-play-ground/play-two.ipynb
+++ b/0-play-ground/play-two.ipynb
@@ -117,6 +117,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## breaking news\n",
+    "## you can use 'else' statement with 'while' loop too"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "as you can see you can use 'else' statement with 'while' loop too\n"
+     ]
+    }
+   ],
+   "source": [
+    "## breaking news\n",
+    "## you can use 'else' statement with 'while' loop too\n",
+    "a = True\n",
+    "while a:\n",
+    "    a= False\n",
+    "else:\n",
+    "    print(\"as you can see you can use 'else' statement with 'while' loop too\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
