--- a/1-exercise-files/05_03_ForLoops.ipynb
+++ b/1-exercise-files/05_03_ForLoops.ipynb
@@ -296,9 +296,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "039caa28",
+   "metadata": {},
+   "source": [
+    "## breaking news\n",
+    "## you can use 'else' statement with 'while' loop too"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "689ef453",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "as you can see you can use 'else' statement with 'while' loop too\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = True\n",
+    "while a:\n",
+    "    a= False\n",
+    "else:\n",
+    "    print(\"as you can see you can use 'else' statement with 'while' loop too\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "689ef453",
+   "id": "1f02c326",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -320,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
