--- a/1-exercise-files/05_04_Challenge_Hints.ipynb
+++ b/1-exercise-files/05_04_Challenge_Hints.ipynb
@@ -137,8 +137,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9c863053",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# answer 1\n",
+    "\n",
+    "def allPrimesUpTo(n):\n",
+    "    primes = [True for _ in range(n+1)]\n",
+    "    p =  2\n",
+    "    while p * p <= n:\n",
+    "        if primes[p] == True:\n",
+    "            for i in range(p * p, n+1, p):\n",
+    "                primes[i] = False\n",
+    "        p +=  1\n",
+    "\n",
+    "    prime_numbers = [p for p in range(2, n) if primes[p]]\n",
+    "    return prime_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e20944d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151, 157, 163, 167, 173, 179, 181, 191, 193, 197, 199, 211, 223, 227, 229, 233, 239, 241, 251, 257, 263, 269, 271, 277, 281, 283, 293, 307, 311, 313, 317, 331, 337, 347, 349, 353, 359, 367, 373, 379, 383, 389, 397, 401, 409, 419, 421, 431, 433, 439, 443, 449, 457, 461, 463, 467, 479, 487, 491, 499, 503, 509, 521, 523, 541, 547, 557, 563, 569, 571, 577, 587, 593, 599, 601, 607, 613, 617, 619, 631, 641, 643, 647, 653, 659, 661, 673, 677, 683, 691, 701, 709, 719, 727, 733, 739, 743, 751, 757, 761, 769, 773, 787, 797, 809, 811, 821, 823, 827, 829, 839, 853, 857, 859, 863, 877, 881, 883, 887, 907, 911, 919, 929, 937, 941, 947, 953, 967, 971, 977, 983, 991, 997]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(allPrimesUpTo(1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "722eb59d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -160,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.2"
   },
   "vscode": {
    "interpreter": {
