--- a/1-exercise-files/05_03_ForLoops.ipynb
+++ b/1-exercise-files/05_03_ForLoops.ipynb
@@ -127,50 +127,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "4d74a187",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_prime(num):\n",
+    "    for number in range(2, num):\n",
+    "        for factor in range(2, int(number ** 0.5) + 1):\n",
+    "            if number % factor == 0:\n",
+    "                break\n",
+    "    else:\n",
+    "        print(f'{number} is prime!')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "046b1b75",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 is prime!\n",
-      "3 is prime!\n",
-      "5 is prime!\n",
-      "7 is prime!\n",
-      "11 is prime!\n",
-      "13 is prime!\n",
-      "17 is prime!\n",
-      "19 is prime!\n",
-      "23 is prime!\n",
-      "29 is prime!\n",
-      "31 is prime!\n",
-      "37 is prime!\n",
-      "41 is prime!\n",
-      "43 is prime!\n",
-      "47 is prime!\n",
-      "53 is prime!\n",
-      "59 is prime!\n",
-      "61 is prime!\n",
-      "67 is prime!\n",
-      "71 is prime!\n",
-      "73 is prime!\n",
-      "79 is prime!\n",
-      "83 is prime!\n",
-      "89 is prime!\n",
-      "97 is prime!\n"
+      "999 is prime!\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "for number in range(2, 100):\n",
-    "    for factor in range(2, int(number ** 0.5) + 1):\n",
-    "        if number % factor == 0:\n",
-    "            break\n",
-    "    else:\n",
-    "        print(f'{number} is prime!')\n",
-    "        "
+    "print(find_prime(1000))"
    ]
   },
   {
