--- a/0-play-ground/play-two.ipynb
+++ b/0-play-ground/play-two.ipynb
@@ -149,6 +149,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 'Monty', 'Python', 'Monty', 5, 'Monty Python', 7, 'Monty', 'Python']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "['Monty Python' if n % 6 == 0 else 'Python' if n % 3 == 0 else 'Monty' if n % 2 == 0 else n for n in range(1, 10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's print something out!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(1, 9):\n",
+    "    if number % 10 == 0:\n",
+    "        break\n",
+    "else:\n",
+    "    print('Let\\'s print something out!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for number in range(1, 100):\n",
+    "    if number % 10 == 0:\n",
+    "        break\n",
+    "else:\n",
+    "    print('Let\\'s print something out!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# *args & **kwargs\n",
+    "## arguments and keyword arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def operation(*args,**kwargs):\n",
+    "    print(args)\n",
+    "    print(kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4)\n",
+      "{'operation1': 'sum', 'operation2': 'dev'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "operation(1,2,3,4, operation1=\"sum\",operation2=\"dev\")\n",
+    "# => (1, 2, 3, 4) \n",
+    "# {'operation1': 'sum', 'operation2': 'dev'}\n",
+    "# as you can see args output type is tuple\n",
+    "# and kwargs output type is dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
