inner_func + local to global

--- a/0-play-ground/play-three.ipynb
+++ b/0-play-ground/play-three.ipynb
@@ -172,6 +172,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# inner function :|\n",
+    "## plus 'global' statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def new(x,y):\n",
+    "    print(x,y)\n",
+    "    def inner_func(x,y): # note: inner function scope is local\n",
+    "        print(x + 2,y)\n",
+    "    inner_func(x,y)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "3 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "new(1,2) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## how to change inner function and local vars scope from local to global"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "5 4\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def new(x,y):\n",
+    "    global z \n",
+    "    z = x\n",
+    "    print(x, y)\n",
+    "    def inner_func(x, y):\n",
+    "        print(x +  2, y)\n",
+    "    global global_inner_func\n",
+    "    global_inner_func = inner_func\n",
+    "\n",
+    "# Example usage:\n",
+    "new(1,  2)  # This will print \"1  2\" and then \"3  2\"\n",
+    "global_inner_func(3,  4)  # This will print \"5  4\"\n",
+    "print(z)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
