--- a/0-play-ground/play-three.ipynb
+++ b/0-play-ground/play-three.ipynb
@@ -250,6 +250,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# fantastic mr.Python\n",
+    "### --------------------------------\n",
+    "## fanastic functions : \n",
+    "### functions are variables !!!!!!!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
