--- a/0-play-ground/play-three.ipynb
+++ b/0-play-ground/play-three.ipynb
@@ -285,7 +285,26 @@
     "If the implementation is hard to explain, it's a bad idea.\n",
     "If the implementation is easy to explain, it may be a good idea.\n",
     "Namespaces are one honking great idea -- let's do more of those!\n",
-    "'''\n"
+    "'''\n",
+    "\n",
+    "def lowercase(text):\n",
+    "    return text.lower()\n",
+    "\n",
+    "def removePunctuation(text):\n",
+    "    punctuations = ['.', '-', ',', '*']\n",
+    "    for punctuation in punctuations:\n",
+    "        text = text.replace(punctuation, '')\n",
+    "    return text\n",
+    "\n",
+    "def removeNewlines(text):\n",
+    "    text = text.replace('\\n', ' ')\n",
+    "    return text\n",
+    "\n",
+    "def removeShortWords(text):\n",
+    "    return ' '.join([word for word in text.split() if len(word) > 3])\n",
+    "\n",
+    "def removeLongWords(text):\n",
+    "    return ' '.join([word for word in text.split() if len(word) < 6])"
    ]
   }
  ],
