I will fuck them all

--- a/0-play-ground/play-three.ipynb
+++ b/0-play-ground/play-three.ipynb
@@ -309,6 +309,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is than ugly is than is than is than flat is than is than dense cases to break the rules beats never pass in the face of the to guess there be one and only one way to do it that way may not be at first dutch now is than never never is often than right now if the is hard to it's a bad idea if the is easy to it may be a good idea are one great idea let's do more of\n"
+     ]
+    }
+   ],
+   "source": [
+    "# and there we go \n",
+    "# functions as variable \n",
+    "processingFunctions = [lowercase, removePunctuation, removeNewlines, removeLongWords]\n",
+    "\n",
+    "for func in processingFunctions:\n",
+    "    text = func(text)\n",
+    "\n",
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
