# ISN'T THIS AMAZING?

--- a/1-exercise-files/07_03_ClassInheritance.ipynb
+++ b/1-exercise-files/07_03_ClassInheritance.ipynb
@@ -119,7 +119,8 @@
     "uniqueList.append(1)\n",
     "uniqueList.append(2)\n",
     "\n",
-    "print(uniqueList)"
+    "print(uniqueList)\n",
+    "# ISN'T THIS AMAZING?"
    ]
   },
   {
