--- a/1-exercise-files/07_03_ClassInheritance.ipynb
+++ b/1-exercise-files/07_03_ClassInheritance.ipynb
@@ -112,7 +112,7 @@
     "    def append(self, item):\n",
     "        if item in self:\n",
     "            return\n",
-    "        super().append(item)\n",
+    "        super().append(item) # IF WE DON'T USE 'super()' TO ACCESS PARENT CLASS METHOD.WE WILL FALL IN INFIINITY LOOP\n",
     "        \n",
     "uniqueList = UniqueList()\n",
     "uniqueList.append(1)\n",
@@ -141,7 +141,8 @@
     "class UniqueList(list):\n",
     "    \n",
     "    def __init__(self):\n",
-    "        super().__init__()\n",
+    "        super().__init__()  # IF WE DON'T USE 'super()' TO ACCESS PARENT CLASS INITIALIZER,\n",
+    "        # WE WILL LOSE EVERYTHING THAT WAS IN PARENT CLASS INIT FUNCTION\n",
     "        self.someProperty = 'Unique List!'\n",
     "        \n",
     "\n",
