--- a/1-exercise-files/08_02_HandlingExceptions.ipynb
+++ b/1-exercise-files/08_02_HandlingExceptions.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "339fce9c",
    "metadata": {},
    "outputs": [
@@ -264,8 +264,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "42d42d9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There was some sort of error!\n"
+     ]
+    }
+   ],
+   "source": [
+    "@handleException\n",
+    "def raiseError2():\n",
+    "    n = 0\n",
+    "    if n == 0:\n",
+    "        raise Exception()\n",
+    "    print(n)\n",
+    "    \n",
+    "raiseError2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a493ba4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -287,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
