--- a/0-play-ground/3-play-three.ipynb
+++ b/0-play-ground/3-play-three.ipynb
@@ -403,6 +403,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ArithmeticError\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    1/0\n",
+    "except ArithmeticError:\n",
+    "    print('ArithmeticError')\n",
+    "except Exception:\n",
+    "    print('Exception')\n",
+    "except DivisionByZeroError:\n",
+    "    print('DivisionByZero')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
