--- a/1-exercise-files/09_03_Processes.ipynb
+++ b/1-exercise-files/09_03_Processes.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "34fcf0b8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#pip install multiprocess\n",
     "from multiprocess import Process\n",
     "import time\n",
     "import threading"
@@ -144,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
