--- a/0-play-ground/2-play-two.ipynb
+++ b/0-play-ground/2-play-two.ipynb
@@ -244,6 +244,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumsum(operation = \"sum\",*args):\n",
+    "    result = 0\n",
+    "    if operation == \"sum\":\n",
+    "        for arg in args:\n",
+    "            result += arg \n",
+    "    elif operation == \"multiply\" :\n",
+    "        for arg in args:\n",
+    "            result *= arg \n",
+    "    return result\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sumsum(1,2,3,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
