--- a/0-play-ground/666-test.ipynb
+++ b/0-play-ground/666-test.ipynb
@@ -48,6 +48,172 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    def __init__(self, name, doors):\n",
+    "        self.name = name\n",
+    "        self.doors = doors\n",
+    "    \n",
+    "    def Start(self):\n",
+    "        print(self.name + ' started!')\n",
+    "    \n",
+    "    def Run(self):\n",
+    "        print(self.name + ' is Runing!')\n",
+    "\n",
+    "    def stop(self):\n",
+    "        print(self.name + ' is stopped!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def number(plak):\n",
+    "    if plak> 5:\n",
+    "        return 10\n",
+    "    else:\n",
+    "        return 2\n",
+    "    \n",
+    "class Peykan(Car):\n",
+    "    \n",
+    "    def __init__(self, name):\n",
+    "        super().__init__(name)\n",
+    "\n",
+    "    # override a function\n",
+    "    def Start(self, color ):\n",
+    "        print(self.name + ' can not start!')\n",
+    "\n",
+    "    def Start(self,engineType):\n",
+    "        print(self.name + ' can knlknklnlnjl start!')\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Peykan.Start() got an unexpected keyword argument 'color'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[36], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m peykan \u001b[38;5;241m=\u001b[39m Peykan(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpeykan javanan\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[43mpeykan\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mStart\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcolor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m1.8\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m peykan\u001b[38;5;241m.\u001b[39mStart(engineType\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1.8\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(peykan\u001b[38;5;241m.\u001b[39mname)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Peykan.Start() got an unexpected keyword argument 'color'"
+     ]
+    }
+   ],
+   "source": [
+    "peykan = Peykan(\"peykan javanan\")\n",
+    "peykan.Start(color= \"1.8\")\n",
+    "peykan.Start(engineType= \"1.8\")\n",
+    "print(peykan.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Peykan' object has no attribute 'doors'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mpeykan\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdoors\u001b[49m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Peykan' object has no attribute 'doors'"
+     ]
+    }
+   ],
+   "source": [
+    "peykan.doors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "This method is not accessible in the child class.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 16\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis method is not accessible in the child class.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     14\u001b[0m child_instance \u001b[38;5;241m=\u001b[39m Child()\n\u001b[1;32m---> 16\u001b[0m \u001b[43mchild_instance\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrestricted_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[19], line 12\u001b[0m, in \u001b[0;36mChild.restricted_method\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrestricted_method\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 12\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis method is not accessible in the child class.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: This method is not accessible in the child class."
+     ]
+    }
+   ],
+   "source": [
+    "# Step  1: Define the Parent Class\n",
+    "class Parent:\n",
+    "    def public_method(self):\n",
+    "        print(\"This is a public method.\")\n",
+    "    \n",
+    "    def restricted_method(self):\n",
+    "        print(\"This method is restricted in the child class.\")\n",
+    "\n",
+    "# Step  2: Define the Child Class\n",
+    "class Child(Parent):\n",
+    "    def restricted_method(self):\n",
+    "        raise Exception(\"This method is not accessible in the child class.\")\n",
+    "\n",
+    "child_instance = Child()\n",
+    "\n",
+    "child_instance.restricted_method()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof!\n",
+      "Meow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def speak(self):\n",
+    "        raise NotImplementedError(\"Subclass must implement this method\")\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"Woof!\"\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"Meow!\"\n",
+    "\n",
+    "# Create a list of Animal objects\n",
+    "animals = [Dog(), Cat()]\n",
+    "\n",
+    "# Call the speak method on each object\n",
+    "for animal in animals:\n",
+    "    print(animal.speak())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
