--- a/2-amazing-in-python/amazed-by-Python.ipynb
+++ b/2-amazing-in-python/amazed-by-Python.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What You Need to Know About Python 3.12 Typing"
+    "# What You Need to Know About Python\n",
+    "\n",
+    " Typing"
    ]
   },
   {
