--- a/666-CODE-SAM-PLES/UnicodeData.ipynb
+++ b/666-CODE-SAM-PLES/UnicodeData.ipynb
@@ -329,6 +329,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">We decode byte strings to Unicode text strings. Whenever we get text from some\n",
+    "external source (files, databases, websites, network APIs, and so on), it’s encoded as\n",
+    "byte strings. The tricky part is knowing which encoding was actually used, so we can\n",
+    "run it backward and get Unicode strings.\n",
+    "The problem is that nothing in the byte string itself says what encoding was used. I\n",
+    "mentioned the perils of copying and pasting from websites earlier. You’ve probably\n",
+    "visited websites with odd characters where plain old ASCII characters should be.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
