--- a/666-CODE-SAM-PLES/UnicodeData.ipynb
+++ b/666-CODE-SAM-PLES/UnicodeData.ipynb
@@ -342,6 +342,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s create a Unicode string called place with the value 'café'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'café'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "place = 'caf\\u00e9'\n",
+    "place"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
