print(place_bytes)

--- a/666-CODE-SAM-PLES/UnicodeData.ipynb
+++ b/666-CODE-SAM-PLES/UnicodeData.ipynb
@@ -378,11 +378,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'caf\\xc3\\xa9'\n"
+     ]
+    }
+   ],
    "source": [
-    "place_bytes = place.encode('utf-8')\n"
+    "place_bytes = place.encode('utf-8')\n",
+    "print(place_bytes)"
    ]
   },
   {
