type(place_bytes)

--- a/666-CODE-SAM-PLES/UnicodeData.ipynb
+++ b/666-CODE-SAM-PLES/UnicodeData.ipynb
@@ -391,7 +391,8 @@
    ],
    "source": [
     "place_bytes = place.encode('utf-8')\n",
-    "print(place_bytes)"
+    "print(place_bytes)\n",
+    "type(place_bytes)"
    ]
   },
   {
