--- a/666-CODE-SAM-PLES/UnicodeData.ipynb
+++ b/666-CODE-SAM-PLES/UnicodeData.ipynb
@@ -407,11 +407,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Notice that place_bytes has five bytes. The first three are the same as ASCII (a\n",
+    "strength of UTF-8), and the final two encode the 'é'. Now let’s decode that byte\n",
+    "string back to a Unicode string:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(place_bytes)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "place2 = place_bytes.decode('utf-8')\n",
+    "print(place2)"
+   ]
   }
  ],
  "metadata": {
