--- a/666-CODE-SAM-PLES/UnicodeData.ipynb
+++ b/666-CODE-SAM-PLES/UnicodeData.ipynb
@@ -437,13 +437,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "café\n"
+     ]
+    }
+   ],
    "source": [
     "place2 = place_bytes.decode('utf-8')\n",
     "print(place2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
