--- a/666-CODE-SAM-PLES/UnicodeData.ipynb
+++ b/666-CODE-SAM-PLES/UnicodeData.ipynb
@@ -454,6 +454,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">This worked because we encoded to UTF-8 and decoded from UTF-8. What if we\n",
+    "told it to decode from some other encoding?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
