place3 = place_bytes.decode('ascii')

--- a/666-CODE-SAM-PLES/UnicodeData.ipynb
+++ b/666-CODE-SAM-PLES/UnicodeData.ipynb
@@ -466,7 +466,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "place3 = place_bytes.decode('ascii')\n"
+   ]
   }
  ],
  "metadata": {
