--- a/666-CODE-SAM-PLES/UnicodeData.ipynb
+++ b/666-CODE-SAM-PLES/UnicodeData.ipynb
@@ -467,7 +467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "place3 = place_bytes.decode('ascii')\n"
+    "place3 = place_bytes.decode('ascii')"
    ]
   }
  ],
