multiple ways of decoding

--- a/666-CODE-SAM-PLES/UnicodeData.ipynb
+++ b/666-CODE-SAM-PLES/UnicodeData.ipynb
@@ -483,6 +483,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">The ASCII decoder threw an exception because the byte value 0xc3 is illegal in\n",
+    "ASCII. There are some 8-bit character set encodings in which values between 128\n",
+    "(hex 80) and 255 (hex FF) are legal but not the same as UTF-8:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cafÃ©\n",
+      "cafÃ©\n"
+     ]
+    }
+   ],
+   "source": [
+    "place4 = place_bytes.decode('latin-1')\n",
+    "print(place4)\n",
+    "place5 = place_bytes.decode('windows-1252')\n",
+    "place5\n",
+    "print(place5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
