--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -14,13 +14,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'è'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import html \n",
     "\n",
-    "html.unscape(\"&egrave;\")"
+    "html.unescape(\"&egrave;\")"
    ]
   },
   {
@@ -38,7 +49,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.2"
   }
  },
