--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -38,7 +38,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This conversion also works with numbered entities, decimal or hex:"
+    ">This conversion also works with numbered entities, decimal or hex:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "é\n",
+      "é\n",
+      "ç\n",
+      "à\n",
+      "ʚ\n"
+     ]
+    }
+   ],
+   "source": [
+    "import html\n",
+    "print(html.unescape(\"&#233;\"))\n",
+    "print(html.unescape(\"&#xe0;\"))\n",
+    "print(html.unescape(\"&#xe1;\"))\n",
+    "print(html.unescape(\"&#xe2;\"))\n",
+    "print(html.unescape(\"&#xe3;\"))\n",
+    "print(html.unescape(\"&#xe4;\"))\n",
+    "print(html.unescape(\"&#xe5;\"))\n",
+    "print(html.unescape(\"&#xe6;\"))\n",
+    "print(html.unescape(\"&#xe7;\"))\n",
+    "print(html.unescape(\"&#xe8;\"))\n",
+    "print(html.unescape(\"&#xe9;\"))\n",
+    "print(html.unescape(\"&#666;\"))"
    ]
   },
   {
