from html.entities import html5

--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -82,6 +82,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">You can even import the named entity translations as a dictionary and do the conver‐\n",
+    "sion yourself. Drop the initial '&' for the dictionary key (you can also drop the final\n",
+    "';', but it seems to work either way):\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "è\n",
+      "è\n"
+     ]
+    }
+   ],
+   "source": [
+    "from html.entities import html5\n",
+    "print(html5[\"egrave\"])\n",
+    "print(html5[\"egrave;\"])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
