--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -111,11 +111,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">To go the other direction (from a single Python Unicode character to an HTML\n",
+    "entity name), first get the decimal value of the character with ord():\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import html"
+   ]
   }
  ],
  "metadata": {
