--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -124,7 +124,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import html"
+    "import html\n",
+    "char = '\\u00e9'"
    ]
   },
   {
