--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -125,7 +125,8 @@
    "outputs": [],
    "source": [
     "import html\n",
-    "char = '\\u00e9'"
+    "char = '\\u00e9'\n",
+    "dec_value = ord(char)\n"
    ]
   },
   {
