--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "import html\n",
     "char = '\\u00e9'\n",
-    "dec_value = ord(char)\n"
+    "dec_value = ord(char) # ord() => Return the Unicode code point for a one-character string.\n"
    ]
   },
   {
