--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -126,7 +126,8 @@
    "source": [
     "import html\n",
     "char = '\\u00e9'\n",
-    "dec_value = ord(char) # ord() => Return the Unicode code point for a one-character string.\n"
+    "dec_value = ord(char) # ord() => Return the Unicode code point for a one-character string.\n",
+    "html.entities.codepoint2name[dec_value]\n"
    ]
   },
   {
