--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -142,6 +142,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">For Unicode strings with more than one character, use this two-step conversion:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
