--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -153,7 +153,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "place = 'caf\\u00e9'\n",
+    "byte_value = place.encode('ascii', 'xmlcharrefreplace')\n",
+    "print(byte_value)"
+   ]
   }
  ],
  "metadata": {
