--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -156,7 +156,8 @@
    "source": [
     "place = 'caf\\u00e9'\n",
     "byte_value = place.encode('ascii', 'xmlcharrefreplace')\n",
-    "print(byte_value)"
+    "print(byte_value)\n",
+    "print(byte_value.decode())"
    ]
   }
  ],
