print(byte_value.decode())

--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -150,15 +150,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'caf&#233;'\n",
+      "caf&#233;\n"
+     ]
+    }
+   ],
    "source": [
     "place = 'caf\\u00e9'\n",
     "byte_value = place.encode('ascii', 'xmlcharrefreplace')\n",
     "print(byte_value)\n",
     "print(byte_value.decode())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
