--- a/666-Pro-Python/3-HTML Entities.ipynb
+++ b/666-Pro-Python/3-HTML Entities.ipynb
@@ -170,6 +170,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The expression place.encode('ascii', 'xmlcharrefreplace') returned ASCII\n",
+    "characters but as type bytes (because it encoded). The following\n",
+    "byte_value.decode() is needed to convert byte_value to an HTML-compatible\n",
+    "string.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
