--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -22,7 +22,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "eacute1 = 'é' # UTF-8, pasted\n",
+    "eacute2 = '\\u00e9' # Unicode code point\n",
+    "eacute3 = '\\N{LATIN SMALL LETTER E WITH ACUTE}'\n",
+    "eacute4 = chr(233) # decimal byte value\n",
+    "eacute5 = chr(0xe9) # hex byte value\n",
+    "eacute1, eacute2, eacute3, eacute4, eacute5\n",
+    "eacute1 == eacute2 == eacute3 == eacute4 == eacute5"
+   ]
   }
  ],
  "metadata": {
