--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -12,8 +12,7 @@
    "metadata": {},
    "source": [
     ">Some Unicode characters can be represented by more than one Unicode encoding.\n",
-    "They’ll look the same, but won’t compare the same because they have different inter‐\n",
-    "nal byte sequences. For example, take the acute accented 'é' in 'café'. Let’s make a\n",
+    "They’ll look the same, but won’t compare the same because they have different internal byte sequences. For example, take the acute accented 'é' in 'café'. Let’s make a\n",
     "single-character 'é' in multiple ways:"
    ]
   },
