--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -27,7 +27,7 @@
     "eacute3 = '\\N{LATIN SMALL LETTER E WITH ACUTE}'\n",
     "eacute4 = chr(233) # decimal byte value\n",
     "eacute5 = chr(0xe9) # hex byte value\n",
-    "eacute1, eacute2, eacute3, eacute4, eacute5\n",
+    "print(eacute1, eacute2, eacute3, eacute4, eacute5)\n",
     "eacute1 == eacute2 == eacute3 == eacute4 == eacute5"
    ]
   }
