unicodedata.name(eacute1)

--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -62,7 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import unicodedata\n"
+    "import unicodedata\n",
+    "unicodedata.name(eacute1)"
    ]
   }
  ],
