ord(eacute1) # as a decimal integer

--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -63,7 +63,9 @@
    "outputs": [],
    "source": [
     "import unicodedata\n",
-    "unicodedata.name(eacute1)"
+    "unicodedata.name(eacute1)\n",
+    "\n",
+    "ord(eacute1) # as a decimal integer\n"
    ]
   }
  ],
