--- a/666-Pro-Python/4- Normalization.ipynb
+++ b/666-Pro-Python/4- Normalization.ipynb
@@ -77,7 +77,7 @@
     "unicodedata.name(eacute1)\n",
     "\n",
     "# ord: Return the Unicode code point for a one-character string.\n",
-    "ord(eacute1) # as a decimal integer\n",
+    "print(ord(eacute1)) # as a decimal integer\n",
     "0xe9 # Unicode hex integer"
    ]
   },
